chore: update to VYBE assets

--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -1,10 +1,10 @@
 ---
-title: Welcome to Nutshell
-description: Your private AI meeting assistant
+title: Welcome to VYBE
+description: Motion graphics in seconds
 icon: house
 ---
 
-Nutshell is a real-time, privacy-first meeting assistant that transforms your meetings into searchable, actionable insights—all processed on your device.
+VYBE is a real-time, privacy-first meeting assistant that transforms your meetings into searchable, actionable insights—all processed on your device.
 
 <Frame>
   <img
