Initial updates for VYBE documentation & Update anchor icons to use VYBE color

--- a/getting-started/FAQ.mdx
+++ b/getting-started/FAQ.mdx
@@ -1,6 +1,6 @@
 ---
 title: Frequently Asked Questions
-description: Find answers to common questions about Nutshell
+description: Find answers to common questions about VYBE
 icon: circle-question
 ---
 
@@ -8,98 +8,129 @@ icon: circle-question
   This FAQ page is currently under development and may contain incomplete or inaccurate information. We are actively working on improving it. For the most up-to-date and accurate information, please contact our support team.
 </Danger>
 
-## Installation & Setup
+## Getting Started & Access
 
 <AccordionGroup>
-  <Accordion icon="download" title="How do I install Nutshell?">
-    For detailed installation instructions, please refer to our [Installation guide](https://help.withnutshell.com/getting-started/download-and-install). The guide will walk you through downloading, installing, and setting up Nutshell on your device.
+  <Accordion title="Is VYBE free to try?">
+    Yes, VYBE offers a free trial version of the app that allows users to get started with animation generation with 3 free credits. 
+    No credit card info is required to start using the free tier. Certain Pro features, such as the brand kit, are not available on the free tier.
   </Accordion>
 
-  <Accordion icon="gear" title="What are the system requirements?">
-    Nutshell has different system requirements depending on features:
-    - For transcription: Any MacBook with Apple Silicon chip, macOS v13+
-    - For AI Assistant features: Minimum 16GB RAM, Apple Silicon chip, macOS v13+
+  <Accordion title="How can I sign up for the private beta?">
+    VYBE is currently in private beta and only available to select users. If you're interested in joining the beta, sign up for the waitlist [here](https://tally.so/r/3NOGMp).
   </Accordion>
 
-  <Accordion icon="trash" title="How do I uninstall Nutshell?">
-    For detailed uninstallation instructions, please follow our [Uninstall Guide](https://help.withnutshell.com/uninstall/uninstall-overview). The guide includes important steps for completely removing all components of Nutshell from your system.
+  <Accordion title="How long will it take to get access if I join the waitlist?">
+    We are working hard to onboard users from the waitlist as quickly as possible while maintaining a great experience. 
+    Wait times can vary, but we appreciate your patience and will notify you as soon as access is available.
   </Accordion>
 </AccordionGroup>
 
-## Features & Usage
+## General Usage
 
 <AccordionGroup>
-  <Accordion icon="microphone" title="How does real-time transcription work?">
-    Nutshell captures audio from your system and transcribes it in real-time using on-device AI technology.
+  <Accordion title="How specific do my chat prompts need to be?">
+    You can start fairly general, and our AI will do its best! 
+    However, the more specific you are with details like colors, objects, movement style, text, and desired mood, the closer the initial result will be to your vision. 
+    Don't worry, you can always refine it through further chat.
   </Accordion>
 
-  <Accordion icon="robot" title="What can I ask the AI chatbot?">
-    Some of the things that the AI chatbot can help you with include:
-    - Summarizing meeting content
-    - Extracting action items
-    - Finding specific information from past discussions
-    - Generating meeting minutes
-    Simply type your question or use "/" to access preset prompts.
+  <Accordion title="What if I don't like the animation the AI generates?">
+    That's perfectly normal, especially during the creative process! 
+    Simply continue chatting with the AI. 
+    Tell it what you'd like to change – for example, "Make the background blue," "Make the text move faster," or "Add a star icon." VYBE is designed for iterative refinement.
   </Accordion>
 
-  <Accordion icon="wifi-slash" title="Does Nutshell work offline?">
-    Yes! All processing happens locally on your device, so Nutshell works perfectly without an internet connection. You can transcribe meetings and interact with the AI chatbot completely offline.
+  <Accordion title="Can I edit the animations after they are generated? How?">
+    Yes! Editing in VYBE is done through the same chat interface. 
+    You don't use traditional editing tools. 
+    Just describe the changes you want to make to the existing animation, and the AI will update it.
+  </Accordion>
+
+  <Accordion title="Can I upload my own assets (logos, images, brand colors)?">
+    Yes! You can upload your own assets to VYBE.
+    Just use the "Attach" button in the chat interface to upload your assets.
+    
+    
+    VYBE Pro subscribers can also access our brand kit feature, which allows you to seamlessly integrate your brand assets such as colors, logos, fonts, and more into your animations for consistent, professional results.
+  </Accordion>
+
+  <Accordion title="What controls do I have over things like colors, fonts, timing, or style?">
+    You control these elements by describing them in your chat prompts. 
+    For example: "Use a bright yellow background," "Make the font a modern sans-serif," "Animate the text to appear slowly over 3 seconds," or "Create a playful, bouncy animation style."
+    
+    
+    Depending on the complexity of the animation, you may also be able to update things like colors, fonts, and text directly in the video preview by clicking 'Update Content'.
   </Accordion>
 </AccordionGroup>
 
-## Security & Privacy
+## Output & Export
 
 <AccordionGroup>
-  <Accordion icon="shield" title="How secure is my data with Nutshell?">
-    Nutshell processes everything locally on your device. No audio, transcriptions, or chat data ever leaves your computer. This ensures maximum privacy and security for your sensitive information.
+  <Accordion title="What format can I export my animations in?">
+    You can export your finished animations as MP4 files, a widely supported video format.
   </Accordion>
 
-  <Accordion icon="building" title="Is Nutshell suitable for enterprise use?">
-    Yes! Nutshell is ideal for organizations with strict security requirements since all data stays on your device. There's no cloud storage or external server communication involved.
-  </Accordion>
-
-  <Accordion icon="scale-balanced" title="What are the legal considerations for recording meetings?">
-    Users are responsible for complying with local laws regarding recording conversations. Always inform all participants when recording or transcribing meetings and obtain necessary consent. Nutshell provides reminder notifications when starting transcription.
+  <Accordion title="Where can I use the animations I create with VYBE?">
+    Your VYBE animations can be used across all digital platforms that support video content. 
+    Showcase them on social media (Instagram, TikTok, Facebook, X, LinkedIn), enhance your website, elevate presentations, boost email marketing campaigns, power digital advertisements, and much more. 
+    
+    
+    The possibilities are endless, provided your usage complies with our [Terms of Service](https://vybe.im/terms).
   </Accordion>
 </AccordionGroup>
 
-## Licensing
+## Account & Subscription
 
 <AccordionGroup>
-  <Accordion icon="key" title="How does licensing work?">
-    Nutshell offers flexible licensing options for individual users and organizations. Each license is tied to a specific device or user account.
+  <Accordion title="How does VYBE's pricing work? / What are credits?">
+    VYBE operates on a subscription model with different monthly credit plans. For example, you might choose a plan with 100, 200, or 300 credits per month. 
+    Each credit allows you to submit one AI chat prompt to generate or iterate on an animation. 
+
+
+    More info about subscriptions can be found [here](/subscription/purchase-subscription).
   </Accordion>
 
-  <Accordion icon="arrows-rotate" title="Can I transfer my license to another device?">
-    Yes, you can transfer your license to a new device. Please refer to our [License Transfer Guide](/license/transfer-license-key) for detailed instructions.
+  <Accordion title="What happens if I run out of credits during a month?">
+    If you use all your credits before your monthly renewal, you'll have the option to upgrade to a higher tier plan to get more credits immediately. 
+    Otherwise, your credits will refresh at the start of your next billing cycle.
   </Accordion>
 
-  <Accordion icon="users" title="Do you offer team/enterprise licensing?">
-    Yes, we offer bulk licensing keys for teams and enterprises. Contact support@withnutshell.com to begin the process.
+  <Accordion title="Can I change or cancel my subscription plan?">
+    Yes, you can change or cancel your subscription plan at any time. 
+    You can do this on your account settings page on the [VYBE website](https://vybe.im/settings?tab=billing).
+  </Accordion>
+
+  <Accordion title="Are my generated animations saved? Where can I find them?">
+    Yes! All animations you generate are automatically saved to your personal VYBE user profile. 
+
+
+    You can access them anytime on [your account profile page](https://vybe.im/profile).
+  </Accordion>
+  
+  <Accordion title="Do you offer enterprise plans?">
+    Yes, we offer enterprise solutions with custom pricing and plan options for larger organizations. 
+    Please visit our [Enterprise page](/subscription/enterprise) for more information or contact us directly to discuss your needs at support@vybe.im.
   </Accordion>
 </AccordionGroup>
 
 ## Troubleshooting
 
 <AccordionGroup>
-  <Accordion icon="microphone-slash" title="What if transcription is not working?">
-    First, check that:
-    - Your microphone permissions are enabled
-    - The correct audio input is selected
-    - You have sufficient system resources available
-    If issues persist, try restarting the application.
+  <Accordion title="What if the AI isn't understanding my prompts correctly?">
+    Try rephrasing your prompt, being more specific, or breaking down a complex request into smaller steps. 
+    Sometimes, adding context or clarifying an ambiguous term can help. You can also try the 'Prompt Enhancement' feature on the chat box. 
+
+
+    If the issue persists, please feel free to reach out to support@vybe.im. We're continuously looking improving our AI's understanding!
   </Accordion>
 
-  <Accordion icon="memory" title="How can I improve transcription accuracy?">
-    To get the best results:
-    - Use a good quality microphone
-    - Ensure clear audio input
-    - Minimize background noise
-    - Speak clearly and at a moderate pace
+  <Accordion title="Where can I get help or support if I have a problem?">
+    If you have any questions or issues, please feel free to email us at support@vybe.im. We're here to help!
   </Accordion>
 </AccordionGroup>
 
 ###
-<Card title="Contact Support" icon="headset" href="mailto:support@withnutshell.com">
-  Our support team is here to help with any questions or issues you may encounter while using Nutshell. support@withnutshell.com
+<Card title="Contact Support" icon="headset" href="mailto:support@vybe.im">
+  Our support team is here to help with any questions or issues you may encounter while using VYBE. support@vybe.im
 </Card>
