--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -3,58 +3,82 @@ title: Welcome to VYBE
 description: Motion graphics in seconds
 icon: house
 ---
+<Warning>VYBE is currently in private beta. If you'd like to join the waitlist, please sign up [here](https://tally.so/r/3NOGMp).</Warning>
 
-VYBE is a real-time, privacy-first meeting assistant that transforms your meetings into searchable, actionable insights—all processed on your device.
+VYBE is an AI-powered web app that instantly generates custom motion graphics animations from your natural language chat prompts.
 
 <Frame>
   <img
     className="block dark:hidden"
-    src="https://d3r37wwqi2kfse.cloudfront.net/nutshell_cover.png"
-    alt="Nutshell Cover"
+    src="/logo/dark.png"
+    alt="VYBE Logo"
   />
   <img
     className="hidden dark:block"
-    src="https://d3r37wwqi2kfse.cloudfront.net/nutshell_cover.png"
-    alt="Nutshell Cover"
+    src="/logo/dark.png"
+    alt="VYBE Logo"
   />
 </Frame>
 
-## Why Choose Nutshell?
 
-In today's fast-paced world, every word counts. Nutshell is built for busy professionals who need:
+## Why Choose VYBE?
 
-- **Real-time transcription & batch processing:** Capture live discussions or review recordings with ease.
-- **Maximum privacy:** All processing happens locally—your data stays on your device.
-- **Interactive insights:** Ask questions during or after your meetings and get instant, context-aware responses.
-- **Customizable assistance:** Use tailored prompts to get the information you need, exactly how you want it.
-- **Offline functionality:** Stay productive even without an internet connection.
+Creating compelling motion graphics can be complex, time-consuming, and expensive. VYBE changes all that. Here’s why you’ll love bringing your ideas to life with VYBE:
+
+<CardGroup cols={1}>
+  <Card title="Effortless Creation, Zero Learning Curve:" horizontal={true} icon="paintbrush">
+    **Say goodbye to complicated software!** With VYBE, if you can describe it, you can create it. Simply chat with our AI in natural language – no intricate timelines, keyframes, or technical jargon to master. It’s as intuitive as sending a message.
+  </Card>
+  <Card title="Professional Quality, No Design Skills Needed:" horizontal={true} icon="medal">
+    You don't need to be a motion graphics artist to produce stunning, attention-grabbing animations. VYBE’s intelligent AI is designed to interpret your creative vision and generate visually appealing, professional-grade results that will impress your audience.
+  </Card>
+  <Card title="Speed Up Your Workflow Dramatically:" horizontal={true} icon="hourglass-half">
+    Go from idea to finished animation in minutes, not hours or days. VYBE’s AI generates animations rapidly, allowing you to produce more content, meet tight deadlines, and react quickly to marketing opportunities.
+  </Card>
+  <Card title="Unleash True Creativity with AI-Powered Originality:" horizontal={true} icon="sparkles">
+    Break free from restrictive templates. VYBE generates unique animations tailored to *your* specific prompt, giving you unparalleled creative freedom to produce truly custom visuals that reflect your brand and message.
+  </Card>
+  <Card title="Iterate and Refine with Unmatched Ease:" horizontal={true} icon="rotate">
+    Not quite perfect on the first try? No problem! Continue the conversation with the AI. Want to change colors, adjust timing, or add an element? Just tell VYBE, and watch your animation update in real-time until it’s exactly what you envisioned.
+  </Card>
+  <Card title="Cost-Effective Solution:" horizontal={true} icon="money-bill-wave">
+    Access high-quality motion graphics capabilities without the hefty price tag of professional design software subscriptions or the expense of hiring specialized designers for every small project. VYBE makes professional animation accessible to everyone.
+  </Card>
+  <Card title="All Your Creations, Organized and Accessible:" horizontal={true} icon="folder-open">
+    Never lose track of your work. All your generated animations are automatically saved to your personal VYBE profile, ready for you to revisit, further refine, or export whenever you need them.
+  </Card>
+  <Card title="Ready-to-Use, Versatile Output:" horizontal={true} icon="circle-check">
+    Easily export your finished animations as MP4 files, the industry standard for video. This means your VYBE creations are instantly ready to be used in your social media posts, marketing campaigns, presentations, websites, and more.
+  </Card>
+</CardGroup>
+
+**In short, VYBE empowers you to create the exact motion graphics you need, faster and more easily than ever before, regardless of your technical skills.**
 
 ## Key Features
 
 <CardGroup cols={2}>
-  <Card title="Real-time & Batch Transcription" icon="user-headset">
-    Capture every detail during live meetings or from recordings with exceptional accuracy.
+  <Card title="AI-Powered Animation Generation" icon="sparkles">
+    No professional animation experience required.
   </Card>
-  <Card title="On-Device Processing" icon="shield">
-    Keep your sensitive data secure with fully local processing—no information is sent to external servers.
+  <Card title="Chat Interface" icon="message">
+    Simply describe your animation in natural language, and VYBE will generate it.
   </Card>
-  <Card title="Interactive AI Chatbot" icon="sparkles">
-    Engage with your meeting content on the fly, ask for summaries, revisit key points, and extract action items.
+  <Card title="Instant Preview & Iteration" icon="magnifying-glass">
+    See your animations instantly as they are created and iterate over the design by chatting with the AI.
   </Card>
-  <Card title="Customizable Prompts" icon="book-sparkles">
-    Adapt Nutshell's insights to your unique meeting styles using a range of customizable prompts.
+  <Card title="MP4 Export" icon="video-arrow-up-right">
+    Export your animations as MP4 files, and use them in your social media posts, marketing campaigns, presentations, websites, and more.
   </Card>
-  <Card title="Offline Access" icon="wifi-slash">
-    Work seamlessly, even off the grid—with complete functionality available without an internet connection.
+  <Card title="User Profile & Project Saving" icon="floppy-disk">
+    Never lose track of your work. All your generated animations are automatically saved to your personal VYBE profile, ready for you to revisit whenever you need them.
+  </Card>
+  <Card title="Remix Templates from the Community" icon="earth-americas">
+    Work with templates created by other users in the VYBE community.
   </Card>
 </CardGroup>
 
-## Responsible and Ethical Use
-
-Nutshell includes an in-app alert when live transcription starts, reminding you to inform all participants. Always ensure compliance with local laws and secure proper consent before recording.
-
 ## Need Help?
 
-<Card title="Contact Support" icon="headset" href="mailto:support@withnutshell.com">
-  Our support team is here to help with any questions or issues you may encounter while using Nutshell. support@withnutshell.com
+<Card title="Contact Support" icon="headset" href="mailto:support@vybe.im">
+  Our support team is here to help with any questions or issues you may encounter while using VYBE. support@vybe.im
 </Card>
