chore: add correct image

--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -10,12 +10,12 @@ VYBE is an AI-powered web app that instantly generates custom motion graphics an
 <Frame>
   <img
     className="block dark:hidden"
-    src="/logo/dark.png"
+    src="https://cdn.vybe.im/vybe-cover.jpg"
     alt="VYBE Logo"
   />
   <img
     className="hidden dark:block"
-    src="/logo/dark.png"
+    src="https://cdn.vybe.im/vybe-cover.jpg"
     alt="VYBE Logo"
   />
 </Frame>
