chore: update styling and remove nutshell references

--- a/changelog/product-update.mdx
+++ b/changelog/product-update.mdx
@@ -1,155 +1,80 @@
 ---
 title: Product Updates
-description: New updates and improvements
+description: New updates and improvements for VYBE
 icon: rocket-launch
 ---
 
-<Update label="2025-2-10" description="v1.0.12">
-  ## Multi-Language Support
+<Update label="2025-04-24" description="v0.0.13">
+  ## [Private Beta]: Improvements to VYBE
 
   <Frame>
-    <img src="https://withnutshell.com/multi_lang_support.png" alt="Multi-Language Support" />
+    <img src="https://cdn.vybe.im/vybe-private-beta.jpg" alt="VYBE private beta launch" />
   </Frame>
 
-  * Added support for 100+ languages with real-time transcription
-  * Automatic language detection during meetings
-  * Cross-language AI chat capabilities
-  * Localized UI for major languages
+  ## Bug Fixes & Stability Improvements
 
-  ## Enhanced AI Chat Experience
+  * Resolved an issue causing crashes during high-resolution 3D object generation.
+  * Fixed a bug where text animations would not render correctly with certain font types.
+  * Addressed a memory leak in the geospatial mapping module.
+  * Improved undo/redo stability for complex AI-driven edits.
+  * Patched a conflict with third-party video codecs on export.
 
-  * Improved context handling for more natural conversations
-  * New specialized AI models for different meeting types
-  * Smart follow-up suggestions based on meeting content
-  * Enhanced summarization capabilities
+  ## Performance Enhancements
 
-  ## Organizational Improvements
+  * Optimized AI model loading times for faster startup.
+  * Reduced GPU memory usage for real-time AI previews by an average of 20%.
+  * Improved rendering speed for projects with numerous animated text layers.
+  * Enhanced responsiveness of the natural language input interface.
 
-  * New folder structure in sidebar for better content management
-  * Custom tags and categories for meetings
-  * Advanced search and filtering options
-  * Bulk organization tools for existing transcripts
+  ## Developer & Integration Updates
 
-  ## Bug Fixes
+  * **NPM Package Refinements:** Updated and streamlined `vybe-core-sdk` and `vybe-ai-components` packages for easier integration. Published detailed migration guides for developers.
+  * **API Endpoint Optimizations:** Improved latency and reliability for key API endpoints used by the AI graphics engine.
 
-  * Fixed memory leak during extended transcription sessions
-  * Resolved audio driver conflicts on Windows 11
-  * Fixed incorrect timestamp synchronization
-  * Addressed UI scaling issues on high-DPI displays
+  ## New Features & Content
 
-  ## Additional Updates
+  * **Branding Page Launched:** Check out our new [Branding Guidelines page](/brand) for official logos, color palettes, and usage instructions!
+  * **Subscription Management Overhaul:** Introduced a new self-serve subscription portal with clearer plan details, easier upgrades/downgrades, and invoice history access.
+  * **New Text Animation Styles:** Added 20+ new AI-powered text animation presets to the library.
 
-  * New dark mode theme options
-  * Improved keyboard shortcuts for power users
-  * Added meeting analytics dashboard
-  * Enhanced export options for popular note-taking apps
+  ## Known Issues
+
+  * We are investigating a rare issue where style transfer on 3D objects may not apply correctly on certain older GPU models. A workaround is being developed.
 </Update>
 
-<Update label="2025-1-20" description="v1.0.11">
-  ## Obsidian Integration
+<Update label="2025-04-10" description="v0.0.12">
+  ## [Private Beta]: AI-Powered Motion Graphics Unleashed
 
   <Frame>
-    <img src="https://d3r37wwqi2kfse.cloudfront.net/obsidian_promo-min_compressed.png" alt="Obsidian Integration" />
+    <img src="https://cdn.vybe.im/vybe-private-beta.jpg" alt="VYBE private beta launch" />
   </Frame>
 
-  * Export transcriptions and AI insights directly to Obsidian
-  * Custom Obsidian templates for meeting notes
-  * Automatic backlinks to related meetings
-  * Seamless integration with your existing knowledge base
+  Introducing the first look at VYBE! We're revolutionizing video editing by embedding AI at the core of the motion graphics creation process. Generate stunning visuals, from intricate 3D objects to dynamic text animations, all in seconds.
 
-  ## Post-Processing Transcription Mode
+  ## Core AI Motion Graphics Engine
 
-  * New option to process recordings after meetings
-  * Reduced system requirements for lower-end hardware
-  * Batch processing of multiple recordings
-  * Higher accuracy through dedicated processing time
+  * **Generative 3D Objects:** Instantly create and integrate complex 3D models into your videos with simple text prompts.
+  * **AI Geospatial Mapping:** Animate geographical data, create dynamic map visualizations, and bring location-based stories to life.
+  * **Dynamic Text Animation Suite:** AI-powered text effects, kinetic typography, and intelligent text-to-speech animations.
+  * **Contextual Motion Design:** VYBE's AI analyzes your footage and suggests relevant motion graphic elements and styles.
 
-  ## Updated Pricing Model
+  ## Intelligent Video Editing Layer
 
-  * New flexible tier system based on usage
-  * Simplified licensing for teams
-  * Educational and non-profit discounts
-  * Monthly and annual billing options
-  * Enterprise custom solutions
+  * **AI Scene Augmentation:** Seamlessly add or remove objects, extend backgrounds, and alter environments with generative AI.
+  * **Adaptive Animation Presets:** A vast library of motion graphic templates that intelligently adapt to your video's content and pacing.
+  * **Smart Object Tracking & Animation:** Lock graphics to moving elements in your footage with unparalleled accuracy.
+  * **AI-Driven Style Transfer for Graphics:** Apply artistic styles to your motion graphics or match them to your video's aesthetic.
 
-  ## Performance Optimizations
+  ## Workflow & Performance Enhancements
 
-  * Improved memory management
-  * Reduced CPU usage during transcription
-  * Better handling of long recordings
-  * Enhanced stability on various hardware configurations
-</Update>
+  * **Real-time AI Preview:** See your AI-generated graphics and animations instantly, no lengthy renders required.
+  * **Natural Language Input:** Describe the graphics you want, and watch VYBE bring them to life.
+  * **Automated Element Synchronization:** AI ensures perfect timing of graphics with audio and video cues.
+  * **Optimized for Speed:** Next-generation rendering engine for blazing-fast exports, even with complex AI graphics.
 
-<Update label="2024-12-16" description="v1.0.10">
-  ## Public Release
+  ## General Improvements & Fixes
 
-  <Frame>
-    <img src="https://dhvdapobgei9v.cloudfront.net/public_release.png" alt="Public Release" />
-  </Frame>
-
-  ## Enhanced AI Chat Experience
-
-  * Expanded context window for more accurate and comprehensive responses
-  * Improved conversation memory for better follow-up questions
-  * Enhanced real-time processing of meeting transcripts
-
-  ## Customizable AI Prompts
-
-
-  * Added custom prompt field for personalized AI interactions
-  * Introduced preset templates for common meeting scenarios
-  * Save and reuse your most effective prompts
-
-  ## UI Refinements
-
-  * Updated color palette for better contrast and accessibility
-  * Refreshed dark mode theme
-  * New visual indicators for AI processing status
-  * Modernized button and input field styles
-
-  ## System Improvements
-
-  * Enhanced license key validation system
-  * Improved offline activation process
-  * Added automatic license status verification
-  * Streamlined license transfer workflow
-  * Better error handling for activation issues
-</Update>
-
-<Update label="2024-11-10" description="v1.0.9">
-  ## Private Beta Launched
-
-  <Frame>
-    <img src="https://dhvdapobgei9v.cloudfront.net/private_beta.png" alt="Private Beta" />
-  </Frame>
-
-  ## Enhanced Transcription Engine
-
-  * Improved real-time transcription accuracy by 25% through optimized audio processing
-  * Added support for batch processing of multiple audio files
-  * Introduced automatic speaker diarization for better meeting organization
-  * Enhanced noise reduction algorithms for clearer transcriptions
-
-  ## AI Model Updates
-
-  * Updated on-device AI models for faster processing and reduced memory usage
-  * Improved context understanding in the AI chatbot
-  * Added new customizable prompt templates for different meeting types
-  * Enhanced summarization capabilities for longer recordings
-
-  ## Bug Fixes
-
-  * Fixed audio driver initialization issues on macOS Sonoma
-  * Resolved memory leak during extended transcription sessions
-  * Fixed keyboard shortcut conflicts with system commands
-  * Corrected timestamp synchronization in exported transcripts
-  * Addressed UI freezing during rapid prompt switching
-
-  ## Interface Improvements
-
-  * Redesigned header for better navigation and accessibility
-  * Added new keyboard shortcuts for common actions
-  * Improved visual feedback during transcription process
-  * Enhanced dark mode consistency across all views
-  * Updated icons for better visual hierarchy
+  * Initial Beta release: Foundation for upcoming features.
+  * Performance tuning for core AI models.
+  * UI refinements for a more intuitive experience.
 </Update>
