--- a/support/contact-us.mdx
+++ b/support/contact-us.mdx
@@ -3,9 +3,9 @@ title: Contact us
 icon: envelope
 ---
 
-Nutshell is a private AI meeting assistant that helps you capture meeting insights and maintain complete control over sensitive data.
+VYBE is a an app that helps you create motion graphic design in seconds.
 
-If you have any questions or feedback, please contact us at [support@withnutshell.com](mailto:support@withnutshell.com).
+If you have any questions or feedback, please contact us at [support@vybe.im](mailto:support@vybe.im).
 
 
 
