--- a/getting-started/introduction.mdx
+++ b/getting-started/introduction.mdx
@@ -3,19 +3,18 @@ title: Welcome to VYBE
 description: Motion graphics in seconds
 icon: house
 ---
-<Warning>VYBE is currently in private beta. If you'd like to join the waitlist, please sign up [here](https://tally.so/r/3NOGMp).</Warning>
 
 VYBE is an AI-powered web app that instantly generates custom motion graphics animations from your natural language chat prompts.
 
 <Frame>
   <img
     className="block dark:hidden"
-    src="https://cdn.vybe.im/vybe-cover.jpg"
+    src="https://cdn.vybe.im/vybe_cover_img.jpg"
     alt="VYBE Logo"
   />
   <img
     className="hidden dark:block"
-    src="https://cdn.vybe.im/vybe-cover.jpg"
+    src="https://cdn.vybe.im/vybe_cover_img.jpg"
     alt="VYBE Logo"
   />
 </Frame>
